# alkohol-oversikt

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.sh  sonar-project.properties
.github/: dependabot.yml  lighthouse-budget.json
.github/ISSUE_TEMPLATE/: bug_report.yml  data_correction.yml  feature_request.yml
.github/workflows/: build-deploy.yml  ci.yml  lighthouse.yml  vinmonopolet-canary.yml
data/: town_municipality_map.json
data/municipalities/: SCHEMA.md  afjord.json  al.json  alesund.json  alstahaug.json  alta.json  alvdal.json  alver.json  amli.json  amot.json  andoy.json  ardal.json  aremark.json  arendal.json  as.json  aseral.json  asker.json  askoy.json  askvoll.json  asnes.json  aukra.json  aure.json  aurland.json  aurskog-holand.json  austevoll.json  austrheim.json  averoy.json  baerum.json  balsfjord.json  bamble.json  bardu.json  batsfjord.json  beiarn.json  bergen.json  berlevag.json  bindal.json  birkenes.json  bjerkreim.json  bjornafjorden.json  bo-i-nordland.json  (+318 more)
data/reference/: kommune_coords_overrides.json  kommune_coords_unresolved.json  kommuner.json
scripts/: build_calendar.py  build_municipality.py  fetch_vinmonopolet.py  geo_bounds.py  holidays.py  import_kommune_coords.py  nearest_store.py  sales.py  validate_data.py  vinmonopolet_hours.py
scripts/hooks/: pre-commit
tests/: conftest.py
tests/infra/: test_data_integrity.py  test_frontend_build.py  test_kommuner_reference.py  test_lint.py  (+5 more)
web/: astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
(+39 files in other folders)
